--- a/index.html
+++ b/index.html
@@ -77,6 +77,6 @@
     
 
     <script src="https://kit.fontawesome.com/1f659fe7a7.js" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
